fix(ai): ensure neutral step splitting and report visual SSIM baseline failure metrics