@@ -442,7 +442,7 @@ public final class HtmlIndexReportGenerator
             // 6. Generate and write index.html
             final String htmlContent = generateIndexHtml(sortedEntries);
             final Path indexPath = outputDirectory.resolve(INDEX_HTML_FILE);
-            Files.writeString(indexPath, htmlContent, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+            Files.write(indexPath, htmlContent.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
 
             LOGGER.info("📑 Test execution index updated: {}", indexPath.toAbsolutePath());
         }
@@ -511,7 +511,7 @@ public final class HtmlIndexReportGenerator
             // 5. Generate and write index.html
             final String htmlContent = generateIndexHtml(sortedEntries);
             final Path indexPath = outputDirectory.resolve(INDEX_HTML_FILE);
-            Files.writeString(indexPath, htmlContent, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+            Files.write(indexPath, htmlContent.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
 
             LOGGER.info("📑 Test execution index refreshed: {}", indexPath.toAbsolutePath());
         }
