@@ -287,7 +287,47 @@ public final class PreliminaryReportListener implements ExecutionListener
             final PlaybookStep pbStep = stepFinished.getStep();
             final PlaybookStepStatus status = stepFinished.getStatus();
 
-            TestExecutionReport.ReportStepEntry targetStep = this.currentStep;
+            TestExecutionReport.ReportStepEntry targetStep = null;
+            if (pbStep != null)
+            {
+                final String pbInstr = pbStep.getInstruction();
+                if (this.currentStep != null && pbInstr != null
+                    && (pbInstr.equals(this.currentStep.getRawInstruction()) || pbInstr.equals(this.currentStep.getInstruction())))
+                {
+                    targetStep = this.currentStep;
+                }
+
+                if (targetStep == null && pbInstr != null)
+                {
+                    for (int i = this.report.getSteps().size() - 1; i >= 0; i--)
+                    {
+                        final TestExecutionReport.ReportStepEntry rootEntry = this.report.getSteps().get(i);
+                        if (pbInstr.equals(rootEntry.getRawInstruction()) || pbInstr.equals(rootEntry.getInstruction()))
+                        {
+                            targetStep = rootEntry;
+                            break;
+                        }
+                        for (int j = rootEntry.getSubSteps().size() - 1; j >= 0; j--)
+                        {
+                            final TestExecutionReport.ReportStepEntry sub = rootEntry.getSubSteps().get(j);
+                            if (pbInstr.equals(sub.getRawInstruction()) || pbInstr.equals(sub.getInstruction()))
+                            {
+                                targetStep = sub;
+                                break;
+                            }
+                        }
+                        if (targetStep != null)
+                        {
+                            break;
+                        }
+                    }
+                }
+            }
+
+            if (targetStep == null)
+            {
+                targetStep = this.currentStep;
+            }
             if (targetStep == null && !this.report.getSteps().isEmpty())
             {
                 targetStep = this.report.getSteps().get(this.report.getSteps().size() - 1);
@@ -924,19 +964,19 @@ public final class PreliminaryReportListener implements ExecutionListener
                     case HTML -> {
                         final String htmlContent = this.htmlGenerator.generate(this.report);
                         final Path htmlFile = this.outputDirectory.resolve(baseFileName + ".html");
-                        Files.writeString(htmlFile, htmlContent, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+                        Files.write(htmlFile, htmlContent.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
                         LOGGER.info("📊 Preliminary HTML report written: {}", htmlFile.toAbsolutePath());
                     }
                     case MARKDOWN -> {
                         final String mdContent = this.markdownGenerator.generate(this.report);
                         final Path mdFile = this.outputDirectory.resolve(baseFileName + ".md");
-                        Files.writeString(mdFile, mdContent, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+                        Files.write(mdFile, mdContent.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
                         LOGGER.info("📝 Preliminary Markdown report written: {}", mdFile.toAbsolutePath());
                     }
                     case JSON -> {
                         final String jsonContent = this.jsonGenerator.generate(this.report);
                         final Path jsonFile = this.outputDirectory.resolve(baseFileName + ".json");
-                        Files.writeString(jsonFile, jsonContent, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+                        Files.write(jsonFile, jsonContent.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
                         LOGGER.info("💾 Preliminary JSON report written: {}", jsonFile.toAbsolutePath());
                     }
                     case ALL -> {
